test_regress/t/t_alias2_unsup.out
%Error-ASSIGNIN: t/t_alias2_unsup.v:42:14: Assigning to input/const variable: 'a'
                                         : ... note: In instance 't.testi_i'
   42 |   alias b = {a[3:0], a[7:4]};
      |              ^
                 ... For error description see https://verilator.org/warn/ASSIGNIN?v=latest
%Error-ASSIGNIN: t/t_alias2_unsup.v:42:22: Assigning to input/const variable: 'a'
                                         : ... note: In instance 't.testi_i'
   42 |   alias b = {a[3:0], a[7:4]};
      |                      ^
%Error-UNSUPPORTED: t/t_alias2_unsup.v:42:20: Unsupported: Operand of alias statement is not a variable reference
                                            : ... note: In instance 't.testi_i'
   42 |   alias b = {a[3:0], a[7:4]};
      |                    ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
